<resources>
    <string name="app_name"><b><i>Breaking Free</i></b></string>
    <string name="app_name_two"><b><i>Breaking Free From Curses</i></b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"><b><i>Raji Kemi Rich</i></b></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings"><b><i>Settings</i></b></string>
    <string name="title_activity_settings"><b><i>Settings</i></b></string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general"><b><i>General</i></b></string>

    <string name="pref_title_social_recommendations"><b><i>Enable social recommendations</i></b></string>
    <string name="pref_description_social_recommendations"><b><i>Recommendations for people to contact
        based on your message history
    </i></b></string>

    <string name="pref_title_display_name"><b><i>Display name</i></b></string>
    <string name="pref_default_display_name"><b><i>John Smith</i></b></string>

    <string name="pref_title_add_friends_to_messages"><b><i>Add friends to messages</i></b></string>
    <string-array name="pref_example_list_titles">
        <item><b><i>Always</i></b></item>
        <item><b><i>When possible</i></b></item>
        <item><b><i>Never</i></b></item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item><b><i>1</i></b></item>
        <item><b><i>0</i></b></item>
        <item><b><i>-1</i></b></item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync"><b><i>Data &amp; sync</i></b></string>

    <string name="pref_title_sync_frequency"><b><i>Sync frequency</i></b></string>
    <string-array name="pref_sync_frequency_titles">
        <item><b><i>15 minutes</i></b></item>
        <item><b><i>30 minutes</i></b></item>
        <item><b><i>1 hour</i></b></item>
        <item><b><i>3 hours</i></b></item>
        <item><b><i>6 hours</i></b></item>
        <item><b><i>Never</i></b></item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item><b><i>15</i></b></item>
        <item><b><i>30</i></b></item>
        <item><b><i>60</i></b></item>
        <item><b><i>180</i></b></item>
        <item><b><i>360</i></b></item>
        <item><b><i>-1</i></b></item>
    </string-array>

    <string-array name="list_preference_entries">
        <item><b><i>Entry 1</i></b></item>
        <item><b><i>Entry 2</i></b></item>
        <item><b><i>Entry 3</i></b></item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item><b><i>1</i></b></item>
        <item><b><i>2</i></b></item>
        <item><b><i>3</i></b></item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings"><b><i>System sync settings</i></b></string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications"><b><i>Notifications</i></b></string>

    <string name="pref_title_new_message_notifications"><b><i>New message notifications</i></b></string>

    <string name="pref_title_ringtone"><b><i>Ringtone</i></b></string>
    <string name="pref_ringtone_silent"><b><i>Silent</i></b></string>

    <string name="pref_title_vibrate"><b><i>Vibrate</i></b></string>
    <string name="introduction"><b><i>Introduction</i></b></string>
    <string name="chapter_one"><b><i>ChapterOne</i></b></string>
    <string name="chapter_two"><b><i>ChapterTwo</i></b></string>
    <string name="chapter_three"><b><i>ChapterThree</i></b></string>
    <string name="chapter_four"><b><i>ChapterFour</i></b></string>
    <string name="chapter_five"><b><i>ChapterFive</i></b></string>
    <string name="chapter_six"><b><i>ChapterSix</i></b></string>
    <string name="chapter_seven"><b><i>ChapterSeven</i></b></string>
    <string name="chapter_eight"><b><i>ChapterEight</i></b></string>
    <string name="chapter_nine"><b><i>ChapterNine</i></b></string>
    <string name="chapter_ten"><b><i>ChapterTen</i></b></string>
    <string name="chapter_eleven"><b><i>ChapterEleven</i></b></string>
    <string name="chapter_twelve"><b><i>ChapterTwelve</i></b></string>
    <string name="chapter_thirteen"><b><i>ChapterThirteen</i></b></string>
    <string name="chapter_fourteen"><b><i>ChapterFourteen</i></b></string>
    <string name="chapter_fifteen"><b><i>ChapterFifteen</i></b></string>
    <string name="chapter_sixteen"><b><i>ChapterSixteen</i></b></string>
    <string name="chapter_seventeen"><b><i>ChapterSeventeen</i></b></string>
    <string name="chapter_eighteen"><b><i>ChapterEighteen</i></b></string>
    <string name="chapter_nineteen"><b><i>ChapterNineteen</i></b></string>
    <string name="chapter_twenty"><b><i>ChapterTwenty</i></b></string>
    <string name="chapter_twenty_one"><b><i>ChapterTwentyOne</i></b></string>
    <string name="share_book"><b><i>Share Book</i></b></string>
    <string name="share"><b><i>Share</i></b></string>
    <string name="add_note"><b><i>Write note!</i></b></string>
    <string name="title_activity_note_pad"><b><i>NotePad</i></b></string>
    <string name="add_note_here"><b><i>Write study note here...</i></b></string>
    <string name="page"><b><i>Book page</i></b></string>
    <string name="next"><b><i>Next</i></b></string>
    <string name="prev"><b><i>Prev</i></b></string>
</resources>
