<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Twenty">

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/viewFlipper_twenty">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView1"
            android:contentDescription="@string/page"
            android:src="@drawable/photo339"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView2"
            android:contentDescription="@string/page"
            android:src="@drawable/photo341"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView3"
            android:contentDescription="@string/page"
            android:src="@drawable/photo342"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView4"
            android:contentDescription="@string/page"
            android:src="@drawable/photo343"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView5"
            android:contentDescription="@string/page"
            android:src="@drawable/photo344"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView6"
            android:contentDescription="@string/page"
            android:src="@drawable/photo345"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView7"
            android:contentDescription="@string/page"
            android:src="@drawable/photo346"/>





    </ViewFlipper>
    <Button
        android:id="@+id/next_twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/btn_text_size"
        app:srcCompat="@drawable/ic_content_copy_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap,SmallSp" />
    <Button
        android:id="@+id/previous_twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:textSize="@dimen/btn_text_size"
        app:srcCompat="@drawable/ic_content_copy_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/next_twenty"/>

</RelativeLayout>