<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Nineteen">

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/viewFlipper_nineteen">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView1"
            android:contentDescription="@string/page"
            android:src="@drawable/photo329"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView2"
            android:contentDescription="@string/page"
            android:src="@drawable/photo331"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView3"
            android:contentDescription="@string/page"
            android:src="@drawable/photo332"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView4"
            android:contentDescription="@string/page"
            android:src="@drawable/photo333"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView5"
            android:contentDescription="@string/page"
            android:src="@drawable/photo334"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView6"
            android:contentDescription="@string/page"
            android:src="@drawable/photo335"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView7"
            android:contentDescription="@string/page"
            android:src="@drawable/photo336"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView8"
            android:contentDescription="@string/page"
            android:src="@drawable/photo337"/>




    </ViewFlipper>
    <Button
        android:id="@+id/next_nineteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/btn_text_size"
        app:srcCompat="@drawable/ic_content_copy_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap,SmallSp" />
    <Button
        android:id="@+id/previous_nineteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:textSize="@dimen/btn_text_size"
        app:srcCompat="@drawable/ic_content_copy_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/next_nineteen"/>

</RelativeLayout>