<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Intro">

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/viewFlipper_intro">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView1"
            android:contentDescription="@string/page"
            android:src="@drawable/photo2"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView2"
            android:contentDescription="@string/page"
            android:src="@drawable/photo3"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView3"
            android:contentDescription="@string/page"
            android:src="@drawable/photo4"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView4"
            android:contentDescription="@string/page"
            android:src="@drawable/photo5"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView5"
            android:contentDescription="@string/page"
            android:src="@drawable/photo6"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView6"
            android:contentDescription="@string/page"
            android:src="@drawable/photo7"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView7"
            android:contentDescription="@string/page"
            android:src="@drawable/photo8"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView8"
            android:contentDescription="@string/page"
            android:src="@drawable/photo9"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView9"
            android:contentDescription="@string/page"
            android:src="@drawable/photo10"/>

    </ViewFlipper>
    <Button
        android:id="@+id/next_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/btn_text_size"
        app:srcCompat="@drawable/ic_content_copy_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap,SmallSp" />
    <Button
        android:id="@+id/previous_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:textSize="@dimen/btn_text_size"
        app:srcCompat="@drawable/ic_content_copy_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/next_intro"/>

</RelativeLayout>